# autonomous_platform

./: .gitignore  CHANGELOG.md  ISSUES_AND_FUTURE_WORK.md  README.md  TEST_DEBUGGING.md  pandoc-log.txt
CAD/CAD_models_2026/lidar/: lidar_holder_2026.f3d  lidar_holder_2026.stl
CAD/CAD_models_2026/speed_sensor/: speed_sensor_holder_front_2026.f3d  speed_sensor_holder_front_2026.stl
CAD/Mocap/: Mocap_reflector_holder.stl
CAD/Node_Box/print/: HW_Node_Bottom_2026.step  HW_Node_Top_2026.step  STM32 bluepill holddown_2026.step  (+1 more)
CAN_Nodes_Microcontroller_Code/HOW_TO_EXTEND/: index.html
CAN_Nodes_Microcontroller_Code/Speed_Sensor_ECU/: Speed_Sensor.md
CHANGELOG/: index.html
HOW_TO_EXTEND/: index.html
Hardware_Interface_Low_Level_Computer/: Dockerfile  ODOMETRY_TEST.md  README.md  SETUP_OF_RASPBERRY_PI.md  docker-compose.yaml  init_system.bash
Hardware_Interface_Low_Level_Computer/SETUP_OF_RASPBERRY_PI/: index.html
Hardware_Interface_Low_Level_Computer/ap4_hwi_code/: hwi_startup.bash  twist_mux_topics.yaml
High_Level_Control_Computer/: DONKEY_CAR_SETUP.md  Dockerfile  IMITATION_LEARNING.md  README.md  TEST_DEBUGGING.md  docker-compose.yaml  start_and_record.sh
High_Level_Control_Computer/Imitation learning/: build-run.sh  start_data_collection.sh
High_Level_Control_Computer/Plot gokart tracectory/: matlab_plot.md  plot_gokart_trajectory.m
High_Level_Control_Computer/ap4_hlc_code/ap4hlc_ws/src/odometry_test_msgs/: CMakeLists.txt  package.xml
High_Level_Control_Computer/ap4_hlc_code/ap4hlc_ws/src/odometry_test_msgs/msg/: OdometryTestData.msg
(+33 files in other folders)
